solved the text being not as visible. Fixed responsiveness for mobile devices though could be improved.

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -82,6 +82,6 @@
   }
 
   form {
-      width: 50vw;
+      width: 75vw;
   }
 }
